--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
+# Rename this file to .env and fill in your MongoDB URI
 PORT=5000
-MONGO_URI=mongodb+srv://kumarmongo8865:%40mongo8865@cluster0.we1bjmz.mongodb.net/bookdb?retryWrites=true&w=majority
+MONGO_URI=your_mongodb_connection_string
